# llm-evals-2-preparing-for-prod

./: .env.sample  README.md  pyproject.toml  requirements.txt
src/config/: config.yml  prompts.yaml
src/llm_evals/: __init__.py  evals.py  utils.py
tasks/task_1/: task_1.md  task_1_solution.md
tasks/task_2/: task_2.md  task_2_solution.md
tasks/task_3/: task_3.md  task_3_solution.md
tasks/task_4/: task_4.md  task_4_solution.md
